--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=social-media
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5431/social-media
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
-spring.session.jdbc.initialize-schema=always
+
+spring.cassandra.contact-points=localhost
+spring.cassandra.port=9042
+spring.cassandra.keyspace-name=spring_cassandra
+spring.cassandra.local-datacenter=datacenter1
+
 spring.security.user.name=admin
 spring.security.user.password=admin
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
+
+logging.level.root=info
+
+spring.jmx.enabled=true
+spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
