--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=social-media
 server.port=8080
 
-spring.cassandra.contact-points=localhost
+spring.cassandra.contact-points=10.0.0.28,10.0.0.39
 spring.cassandra.port=9042
-spring.cassandra.keyspace-name=spring_cassandra
+spring.cassandra.keyspace-name=social_media
 spring.cassandra.local-datacenter=datacenter1
 
 logging.level.root=info
 
 spring.jmx.enabled=true
 spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+spring.cassandra.request.consistency=LOCAL_QUORUM
